--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pico8 Online Map Editor</title>
     <script type="text/javascript"  src="./scripts/local-file.service.js"></script>
+    <script type="text/javascript"  src="./scripts/pico8Colors.js"></script>
+    <script type="text/javascript"  src="./scripts/parseSpriteData.service.js"></script>
 </head>
 <body>
     <h1>Online Map Editor</h1>
-    <input id="pico8-source-upload" type="file" onsubmit="submitFile" accept=".p8" />
-
+    <div>
+        <input id="pico8-source-upload" type="file" onsubmit="submitFile" accept=".p8" />
+    </div>
+    <canvas width="128" height="64" id="canvas-sprites-single-porpuse-preview"></canvas>  
+    <canvas width="128" height="32" id="canvas-dual-porpuse-preview1"></canvas>  
+    <canvas width="128" height="32" id="canvas-dual-porpuse-preview2"></canvas>  
     <script src="./scripts/index.js"></script>
 </body>
 </html>
