--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
     <script type="text/javascript"  src="./scripts/local-file.service.js"></script>
     <script type="text/javascript"  src="./scripts/pico8Colors.js"></script>
     <script type="text/javascript"  src="./scripts/parseSpriteData.service.js"></script>
+    <script type="text/javascript"  src="./scripts/drawMap.service.js"></script>
 </head>
 <body>
     <h1>Online Map Editor</h1>
     <div>
         <input id="pico8-source-upload" type="file" onsubmit="submitFile" accept=".p8" />
     </div>
-    <canvas width="128" height="64" id="canvas-sprites-single-porpuse-preview"></canvas>  
-    <canvas width="128" height="32" id="canvas-dual-porpuse-preview1"></canvas>  
-    <canvas width="128" height="32" id="canvas-dual-porpuse-preview2"></canvas>  
+    <div style="width: 100%">
+        <canvas id="canvas-sprites-single-porpuse-preview" style="display: block"></canvas>  
+        <canvas id="canvas-dual-porpuse-preview1" style="display: block"></canvas>  
+        <canvas id="canvas-dual-porpuse-preview2" style="display: block"></canvas>  
+        <canvas id="canvas-map" style="display: block"></canvas>
+    </div>
+    
     <script src="./scripts/index.js"></script>
 </body>
 </html>
