--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
 </head>
 <body style="display: flex; flex-direction: column; align-items: center; background-color: #000000;">
     <div style="max-width: 1024px; width: 75vw; background-color: #1D2B53; color: #C2C3C7; min-height: 100vh;">
-        <header style="background-color: #FF004D; color: #FFCCAA; padding: 8px;">
+        <header style="display: flex; align-items: center; gap:8px; background-color: #FF004D; color: #FFCCAA; padding: 8px;">
+            <a href="https://www.lexaloffle.com/" target="_blank" style="display: block; height: 24px">
+                <image src="./images/pico8.png" width="20px" height="20px" alt="pico8-logo" style="border-radius: 50%; background-color: #000000; padding: 2px;"></image>
+            </a>            
             <h1 style="font-size: larger;">Pico8 Map extractor</h1>
         </header>
         <main>
             <div style="display: flex; flex-direction: column; gap: 8px; margin-bottom: 8px; padding: 8px;">
                 <div style="display: grid; columns: 2; grid-template-columns: 256px auto; column-gap: 8px;">
                     <div></div>
-                    <input id="pico8-source-upload" type="file" onsubmit="submitFile" accept=".p8" class="file-input" />
+                    <input id="pico8-source-upload" type="file" onsubmit="submitFile" accept=".p8" class="file-input"/>
                     <canvas id="canvas-sprites-single-porpuse-preview" style="display: block"></canvas>  
                     <p>single purpose Sprite Data</p>
                     <canvas id="canvas-dual-porpuse-preview1" style="display: block"></canvas>  
@@ -44,12 +47,16 @@
                     <button style="display: block; width: 100%" id="preview-map-data-btn">Preview Map</button>
                 </div>                
             </div>            
-            <div style="overflow: hidden; display: flex; flex-direction: column; justify-content: center; background-color: #0e1b41;" class="preview-height">
+            <div style="overflow-x: hidden; display: flex; flex-direction: column; justify-content: center; background-color: #0e1b41;" class="preview-height">
                 <canvas id="canvas-map" style="display: block"></canvas>
+                <p style="padding: 8px;">right click on map and select "save as" to export the image</p>
             </div>
         </main>        
         <footer style="padding: 8px; background-color: #FF004D; color: #FFCCAA;">
-            View Pico8 oficial website, made by Saturn91.dev
+            <a href="https://saturn91.dev/" target="_blank" style="display: flex; gap:8px; height: 30px">
+                <image src="./images/logo.png" height="90%" alt="link_to_saturn91.dev"></image>
+                <p>visit my website for other pico8 and gamedev projects :D</p>
+            </a>            
         </footer>
     </div>
     
