--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pico8 Online Map Editor</title>
+    <title>Pico8 Online Map Extractor</title>
     <script type="text/javascript"  src="./scripts/local-file.service.js"></script>
     <script type="text/javascript"  src="./scripts/pico8Colors.js"></script>
     <script type="text/javascript"  src="./scripts/parseSpriteData.service.js"></script>
