[ADD] hint for inbuild pico8 feature

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                         <select id="colors">
                         </select>
                     </div>                   
-                    <button style="display: block; width: 100%" id="preview-map-data-btn">Preview Map</button>
+                    <button style="display: block; width: 100%; margin-bottom: 8px;" id="preview-map-data-btn">Preview Map</button>
+                    <div></div><p style="background-color: #FFA300; color: white; padding: 4px; text-align: center;">hint... you can also do this with "export yourfileName.map.png" as a build in feature in pico8</p>
                 </div>                
             </div>            
             <div style="overflow-x: hidden; display: flex; flex-direction: column; justify-content: center; background-color: #0e1b41;" class="preview-height">
