[ADD] optional feature screen grid

--- a/index.html
+++ b/index.html
@@ -31,13 +31,18 @@
                     <p>single purpose Sprite Data</p>
                     <canvas id="canvas-dual-porpuse-preview1" style="display: block"></canvas>  
                     <div>
+                        <input type="checkbox" checked name="use as map Data" id="use_dual_purpose1">
                         <label>1. dual sprite data section</label>
-                        <input type="checkbox" checked="false" name="use as map Data" id="use_dual_purpose1">
                     </div>
                     <canvas id="canvas-dual-porpuse-preview2" style="display: block"></canvas>  
                     <div>
+                        <input type="checkbox" checked name="use as map Data" id="use_dual_purpose2">
                         <label>2. dual sprite data section</label>
-                        <input type="checkbox" checked="false" name="use as map Data" id="use_dual_purpose2">
+                    </div>
+                    <div></div>
+                    <div style="margin-bottom: 8px;">
+                        <input type="checkbox" name="screen grid" id="use-screen-grid">
+                        <label>display screen size grid</label>                        
                     </div>
                     <div>
                         <lavel>back ground color</lavel>
