--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript"  src="./scripts/pico8Colors.js"></script>
     <script type="text/javascript"  src="./scripts/parseSpriteData.service.js"></script>
     <script type="text/javascript"  src="./scripts/drawMap.service.js"></script>
+    <script type="text/javascript"  src="./scripts/pal-parser.service.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
@@ -23,7 +24,7 @@
             <h1 style="font-size: larger;">Pico8 Map extractor</h1>
         </header>
         <main>
-            <div style="display: flex; flex-direction: column; gap: 8px; margin-bottom: 8px; padding: 8px;">
+            <div style="display: grid; grid-template-columns: auto 300px; gap: 8px; margin-bottom: 8px; padding: 8px; min-width: 100%;">
                 <div style="display: grid; columns: 2; grid-template-columns: 256px auto; column-gap: 8px;">
                     <div></div>
                     <input id="pico8-source-upload" type="file" onsubmit="submitFile" accept=".p8" class="file-input"/>
@@ -50,8 +51,13 @@
                         </select>
                     </div>                   
                     <button style="display: block; width: 100%; margin-bottom: 8px;" id="preview-map-data-btn">Preview Map</button>
-                    <div></div><p style="background-color: #FFA300; color: white; padding: 4px; text-align: center;">hint... you can also do this with "export yourfileName.map.png" as a build in feature in pico8</p>
-                </div>                
+                </div>  
+                <textarea id="col-pal-code" style="height: 238px; width: calc(300px - 36px); padding: 8px; border: 4px solid #FF004D; background-color: #1D2B53; color: #C2C3C7; letter-spacing: 1.5px; font-weight: bold;"
+                >//you can use this textarea
+//to define the color pals
+//just remove the "//"
+//pal(14,140,1)
+            </textarea>                    
             </div>            
             <div style="overflow-x: hidden; display: flex; flex-direction: column; justify-content: center; background-color: #0e1b41;" class="preview-height">
                 <canvas id="canvas-map" style="display: block"></canvas>
@@ -64,8 +70,7 @@
                 <p>visit my website for other pico8 and gamedev projects :D</p>
             </a>            
         </footer>
-    </div>
-    
+    </div>    
     
     <script src="./scripts/index.js"></script>
 </body>
