--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>                   
                     <button style="display: block; width: 100%; margin-bottom: 8px;" id="preview-map-data-btn">Preview Map</button>
                 </div>  
-                <textarea id="col-pal-code" style="height: 238px; width: calc(300px - 36px); padding: 8px; border: 4px solid #FF004D; background-color: #1D2B53; color: #C2C3C7; letter-spacing: 1.5px; font-weight: bold;"
+                <textarea id="col-pal-code" style="height: 207px; width: calc(300px - 36px); padding: 8px; border: 4px solid #FF004D; background-color: #1D2B53; color: #C2C3C7; letter-spacing: 1.5px; font-weight: bold; resize: none;"
                 >//you can use this textarea
 //to define the color pals
 //just remove the "//"
