[EDIT] styling and error handling in pal parser

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
 //pal(14,140,1)
             </textarea>                    
             </div>            
-            <div style="overflow-x: hidden; display: flex; flex-direction: column; justify-content: center; background-color: #0e1b41;" class="preview-height">
-                <canvas id="canvas-map" style="display: block"></canvas>
+            <div style="display: flex; flex-direction: column; justify-content: center; background-color: #0e1b41;" class="preview-height">
+                <canvas id="canvas-map" style="display: block; overflow-x: hidden;"></canvas>
                 <p style="padding: 8px;">right click on map and select "save as" to export the image</p>
             </div>
         </main>        
         <footer style="padding: 8px; background-color: #FF004D; color: #FFCCAA;">
             <a href="https://saturn91.dev/" target="_blank" style="display: flex; gap:8px; height: 30px">
                 <image src="./images/logo.png" height="90%" alt="link_to_saturn91.dev"></image>
-                <p>visit my website for other pico8 and gamedev projects :D</p>
+                <p style="color: #FFCCAA; font-weight: bold;">visit my website for other pico8 and gamedev projects :D</p>
             </a>            
         </footer>
     </div>    
